Switch statement : empty case and case ending with return